@@ -56,9 +56,10 @@ static int in_regtest = 0;
 
 static owl_variable variables_to_init[] = {
 
-  OWLVAR_BOOL( "personalbell" /* %OwlVarStub */, 0,
-	       "ring the terminal bell when personal messages are received",
-	       "" ),
+  OWLVAR_STRING( "personalbell" /* %OwlVarStub */, "off",
+		 "ring the terminal bell when personal messages are received\n",
+		 "Can be set to 'on', 'off', or the name of a filter which\n"
+		 "messages need to match in order to ring the bell"),
 
   OWLVAR_BOOL( "bell" /* %OwlVarStub */, 1,
 	       "enable / disable the terminal bell", "" ),
